collapse bug fix

--- a/OrientDBVisualizationTool/src/main/resources/styles/02_DarkModeStyle.css
+++ b/OrientDBVisualizationTool/src/main/resources/styles/02_DarkModeStyle.css
@@ -32,6 +32,18 @@
     linear-gradient(from 0px 0px to 0px 100px, repeat, #272727 0%, transparent 1%, rgba(100, 100, 100, 0) 99%, #272727 100% );
 }
 
+.button {
+    -fx-text-fill: white;
+}
+
+.label {
+    -fx-text-fill: whitesmoke;
+}
+
+.menu-bar {
+    -fx-background-color: #292929;
+}
+
 .text-field {
     -fx-text-fill: #0b0b0a;
 }
